--- a/apify/ridhohariono/storelocator/pressedjuicery_com/README
+++ b/apify/ridhohariono/storelocator/pressedjuicery_com/README
@@ -1,1 +1,2 @@
-Failing because the address has an address number but the validation library can not detect the number
+(--ignore StreetAddressHasNumber) Failing because the address has an address number but the validation library can not detect the number
+(--ignore StoreNumberColumnValidator) Failing because the store number have null value in some fields
